# backend/src/main/java/fr/spirolad/infrastructure/rest/mapper/SkillRestMapper.java
@@ -1,0 +1,17 @@
+package fr.spirolad.infrastructure.rest.mapper;
+
+import fr.spirolad.domain.model.Skill;
+import fr.spirolad.dto.SkillRequest;
+import fr.spirolad.dto.SkillResponse;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+
+@Mapper(componentModel = "cdi", uses = {CategoryRestMapper.class})
+public interface SkillRestMapper {
+    @Mapping(target = "id", ignore = true)
+    @Mapping(source = "name", target = "name")
+    @Mapping(source = "category", target = "category")
+    Skill toDomain(SkillRequest dto);
+
+    SkillResponse toResponse(Skill domain);
+}
